# string_math

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
include/fx/: math.hpp
include/string_math/: calculator.hpp  constexpr_context.hpp  context.hpp  error.hpp  evaluate.hpp  expression.hpp  operation.hpp  policy.hpp  result.hpp  semantics.hpp  smath.hpp  string_math.hpp  traits.hpp  value.hpp
include/string_math/builtin/: default_math.hpp
include/string_math/context/: context.hpp  static_context.hpp
include/string_math/detail/: base.hpp  builtin_functions.hpp  builtin_specs.hpp  builtins.hpp  config.hpp  constexpr.hpp  context_owner_interface.hpp  fixed_string.hpp  literal.hpp  overload.hpp
include/string_math/diagnostics/: result.hpp
include/string_math/expression/: evaluate.hpp  expression.hpp  operation.hpp
include/string_math/internal/: arithmetic.hpp  builtins.hpp  callable.hpp  catalog.hpp  config.hpp  constexpr_parser.hpp  context_data.hpp  overload_impl.hpp  parser.hpp  result.hpp  static_context_data.hpp  type_conversion.hpp  type_traits.hpp  types.hpp  value.hpp
include/string_math/internal/builtin/: default_math.hpp
include/string_math/internal/callable/: callable.hpp
include/string_math/internal/context/: context.hpp  context_data.hpp  static_context.hpp
include/string_math/internal/error/: error.hpp
include/string_math/internal/expression/: expression.hpp  operation.hpp
include/string_math/internal/parser/: parser.hpp
include/string_math/internal/support/: arithmetic.hpp  config.hpp  fixed_vector.hpp
include/string_math/internal/value/: value.hpp
include/string_math/semantics/: overload.hpp  semantics.hpp
include/string_math/value/: policy.hpp  traits.hpp  types.hpp  value.hpp
src/: main.cpp
tests/: constexpr_test.cpp  runtime_test.cpp
